deployment-strategies/canary-canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-strategies-canary-canary-ingress
  namespace: deployment-strategies
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: "deployment-strategies-canary.local"
      http:
        paths:
          - backend:
              service:
                name: deployment-strategies-canary-green
                port:
                  number: 8080
            path: /
            pathType: Prefix
